Acrescentando comentários aos posts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/worhshop_mongo
+spring.data.mongodb.uri=mongodb://localhost:27017/worhshop_mongo_home
